Parkinson Canada project

--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
                         <li class="nav-item">
                             <button class="nav-link w-100" @click="currentTag = 'branding'" :class="{active: currentTag == 'branding'}" v-on:click="filter('branding')">Branding</button>
                         </li>
-                        <li class="nav-item">
+                        <!--<li class="nav-item">
                             <button class="nav-link w-100" @click="currentTag = 'ux'" :class="{active: currentTag == 'ux'}" v-on:click="filter('ux')">UX Design</button>
-                        </li>
+                        </li>-->
                         <li class="nav-item">
                             <button class="nav-link w-100" @click="currentTag = 'video'" :class="{active: currentTag == 'video'}" v-on:click="filter('video')">Video</button>
                         </li>
