--- a/carna-awards.html
+++ b/carna-awards.html
@@ -77,7 +77,7 @@
                 </div>
                 <p>
                     <small>Cover and interior pages from the CARNA Awards event program</small>
-                    <div class="video-container mt-5"><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/blGXlK1-exw?iv_load_policy=3&modestbranding=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+                    <div class="video-container mt-5"><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/WWonXftk75w?iv_load_policy=3&modestbranding=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
                 <p><small>Promotional video for the 2016 CARNA Awards Gala</small></p>
             </div>
         </div>
